--- a/GoodCompany.Web/Views/Shared/_Layout.cshtml
+++ b/GoodCompany.Web/Views/Shared/_Layout.cshtml
@@ -37,17 +37,17 @@
                         <a asp-controller="home" asp-action="index" class="nav-link">List</a>
                     </li>
                     <li class="nav-item">
-                        <a asp-controller="home" asp-action="create" class="nav-link">Create</a>
+                        <a asp-controller="home" asp-action="add" class="nav-link">Create</a>
                     </li>
 
                 </ul>
-                <ul class="navbar-nav ml-auto">
+                @*<ul class="navbar-nav ml-auto">
                     <li class="nav-item">
                         <a class="nav-link" asp-controller="account" asp-action="register">
                             Register
                         </a>
                     </li>
-                </ul>
+                </ul>*@
             </div>
         </nav>
         <div>
