--- a/GoodCompany.Web/Views/Home/Add.cshtml
+++ b/GoodCompany.Web/Views/Home/Add.cshtml
@@ -7,7 +7,7 @@
 <h1>Add</h1>
 
 
-<form asp-controller="home" asp-action="create" method="post" enctype="multipart/form-data">
+<form asp-controller="home" asp-action="Add" method="post" enctype="multipart/form-data">
     <div class="form-group row">
         <label asp-for="Name" class="col-sm-2 col-form-label"></label>
         <div class="col-sm-10">
@@ -71,7 +71,7 @@
     <div asp-validation-summary="All" class="text-danger"></div>
     <div class="form-group row">
 
-        <input type="submit" value="Create" />
+        <input type="submit" value="Add" />
     </div>
 
 </form>
